--- a/CSS/float.css
+++ b/CSS/float.css
@@ -25,6 +25,9 @@ img{
 
 .list{
     width: 300px;
+    background-color: yellowgreen;
+    padding: 10px;
+    border-style: solid; 
     
 }
 .clearLeft{
