--- a/Project-Jquary-Ajax-Bootstrap/sass/main.scss
+++ b/Project-Jquary-Ajax-Bootstrap/sass/main.scss
@@ -1,7 +1,7 @@
 nav {
-    background-color: black;
+    background-color: $crna;
     a{
-        color: white;
+        color: $bela;
     }
    
 }
